[package]
name = "virtual-hauntedhouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.7", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8.0"

[[bin]]
name = "virtual-hauntedhouse"
path = "main.rs"

